--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ leafletMarker.bindPopup('Faculty ITC');
 
 
 document.getElementById('leaflet-code-content').textContent = `
-var leafletMap = L.map('leaflet-map').setView([51.505, -0.09], 13);
+var leafletMap = L.map('leaflet-map', { attributionControl: false }).setView([52.2, 6.9], 10);
 
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
   attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors',
