--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 // Leaflet Map
 
-var leafletMap = L.map('leaflet-map', { attributionControl: false }).setView([52.2, 6.9], 10);
+var leafletMap = L.map('leaflet-map').setView([52.2, 6.9], 10);
 
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 18
@@ -105,7 +105,7 @@ leafletMarker.bindPopup('Faculty ITC');
 
 
 document.getElementById('leaflet-code-content').textContent = `
-var leafletMap = L.map('leaflet-map', { attributionControl: false }).setView([52.2, 6.9], 10);
+var leafletMap = L.map('leaflet-map').setView([52.2, 6.9], 10);
 
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
   attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors',
