--- a/index.html
+++ b/index.html
@@ -15,20 +15,33 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/prism.min.js"></script>
 
 
-
-
 <style>
     body {
       font-family: Arial, sans-serif;
     }
     .content {
-      max-width: 97%;  /* Change the width as you wish */
+      max-width: 97%; 
       margin: 0 auto;
     }
 
-    h1,h2,h3 {
-      text-align: center;
-    }
+
+    h1, h2, h3 {
+    text-align: center;
+    margin: 10px 0;  
+}
+
+h2 {
+    font-size: 25px; 
+    color: #333;
+    margin-bottom: 1px; 
+}
+
+h3 {
+    font-size: 20px;  
+    color: #d89339;
+    margin-top: 1px;  
+}
+
 
     .map-container {
       display: flex;
