--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ openLayersMap.on('click', function (event) {
 
 
 document.getElementById('openlayers-code-content').innerHTML =  Prism.highlight(`
-// Creates a new Leaflet map in the HTML element with the id 'openlayers-map',  with a tile layer using OpenStreetMap tiles, centers it at the given coordinates (latitude 52.2, longitude 6.9) and sets the initial zoom level to 10.
+// Creates a new OpenLayers map in the HTML element with the id 'openlayers-map',  with a tile layer using OpenStreetMap tiles, centers it at the given coordinates (latitude 52.2, longitude 6.9) and sets the initial zoom level to 10.
 var openLayersMap = new ol.Map({
 target: 'openlayers-map',
 layers: [
